--- a/Student_Dropout_risk_prediction_Analysis.ipynb
+++ b/Student_Dropout_risk_prediction_Analysis.ipynb
@@ -7,7 +7,7 @@
     "id": "36e85374"
    },
    "source": [
-    "3-EduLearn offers online courses and needs to identify students at risk of dropping out .Can they use classification models to predict and intervene with struggling students"
+    "EduLearn offers online courses and needs to identify students at risk of dropping out .Can they use classification models to predict and intervene with struggling students"
    ]
   },
   {
